<resources>
    <string name="app_name">FinalProject</string>

    <!--OC_Transport-->
    <string name="desc">Image</string>
    <string name="welcome">Welcome to OC Transport!</string>
    <string name="select">Please select only one route below!</string>
    <string name="byRoute">Search By Route</string>
    <string name="byStop">Search By Stop</string>
    <string name="goHome">Go back to home page!</string>
    <string name="hint">Please enter the route number or stop number</string>


    <!--movie-->
    <string name="searchButton">search</string>
    <string name="homeButton">To Home Page</string>
    <string name="dialog_message">Do You Want To Go Home Page?</string>
    <string name="dialog_title">Warning</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="home_message">Well Come Back To Home</string>




    <!--CBCNEWS-->
    <string name="cbc_search">Search</string>
    <string name="cbc_editText">Type the title of the article</string>
    <string name="cbc_button_quit">Do you want to Quit the application?</string>
    <string name="cbc_button_save">Do you want to Save the article?</string>
    <string name="cbc_menu_itme">CBC</string>
    <string name="cbc_helper_message">Author: Xin Zhao \n Version: 2.0 The detail of the application: You can get the article title and select or save the article in this applicatin</string>
    <string name="cbc_button_frame">Change to Frame Layout</string>
    <string name="cbc_frame_change_button">Change FrameLayout</string>
    <string name="cbc_asy_button">AsyncTask</string>
    <string name="cbc_item_help">Help</string>
    <string name="cbc_item_exit">Exit</string>
    <string name="cbc_detail_alert">Read Error, please check the file name!</string>
    <string name="cbc_title">Title:</string>
    <string name="cbc_guid">Guid:</string>
    <string name="cbc_load">Loading</string>
    <string name="cbc_pubDate">Public Date :</string>
    <string name="cbc_author">Author :</string>
    <string name="cbc_category">Category :</string>
    <string name="cbc_link">Link :</string>
    <string name="cbc_go">Go Link :</string>
    <string name="cbc_desC">Description :</string>
    <string name="cbc_des">Go description :</string>
    <string name="cbc_save">Save</string>
    <string name="cbc_total">Total for Saving</string>
    <string name="cbc_exit">Exit</string>
    <!--Nutrition-->
    <string name="NutritionButton">Nutrition</string>
    <string name="HintNutrition">Search Database</string>
    <string name="ExitButtonNutrition">Exit</string>
    <string name="FragmentButton">Fragment Image</string>
    <string name="Information">Author is James Barclay \n Version: 2.1 \n This Application allows you to do research on nutritional facts and save it to your favorites</string>
    <string name="Title">Help</string>
    <string name="cancelNutrition">Cancel</string>
    <string name="ApiButton">NutritionDatabase</string>
    <string name="NewExitButton">Exit</string>
    <string name="HelpToolBar">Help</string>

</resources>
