<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbc_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbc_guid"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/guid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbc_pubDate"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pubDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbc_author"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbc_category"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cbc_link"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/link"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cbc_go"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/goDescription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cbc_des"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cbc_save"
            android:textColor="#fff" />

        <Button
            android:id="@+id/statistical"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cbc_total"
            android:textColor="#fff" />

        <Button
            android:id="@+id/cbc_snack"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cbc_exit"
            android:textColor="#fff" />


    </LinearLayout>

</LinearLayout>