<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OCTranspoActivity"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/OCToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />


<android.support.v4.widget.DrawerLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/welcomeOCTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/welcomeOCTitle"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/userEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeOCTitle"
        android:hint="@string/hint"
        android:autofillHints="@string/hint"
        android:inputType="text" />
    <Button
        android:id="@+id/byRoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEnter"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"

        android:text="@string/byRoute" />

    <Button
        android:id="@+id/byStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/byRoute"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="295dp"
        android:text="@string/byStop" />

    <ProgressBar
        android:id="@+id/progressBarO"
        android:layout_alignStart="@+id/byStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

    <ListView
        android:id="@+id/listViewO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/goHomeO"
        android:layout_below="@+id/byStop" />

    /*<Button
        android:id="@+id/goHomeO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goHome"
        android:layout_alignParentBottom="true"
        />*/

    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>
</LinearLayout>